# diploma

./: CMakeLists.txt  INSTALL  README  README.md  build_mingw32  build_mingw64  diploma.kdev4  removefile.sh
cmake/modules/: MinGWCrossCompile.cmake  Win32Toolchain.cmake  Win64Toolchain.cmake
src/: .directory  CMakeLists.txt  InvioStampaDiplomaThread.cpp  InvioStampaDiplomaThread.h  alunni.cpp  alunni.h  anno.cpp  anno.h  conn_db.cpp  conn_db.h  diploma.db  diploma.manifest  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  moc_plesso.cpp  pref.cpp  pref.h  print.cpp  print.h  scuola.cpp  scuola.h  settingsmanager.cpp  settingsmanager.h  update.manifest  winicon.rc
src/desktop/: diploma.desktop
src/font/: .directory
src/images/: .directory
src/ui/: alunni.ui  anno.ui  mainwindow.ui  pref.ui  scuola.ui
xlsx/: .directory  CMakeLists.txt  moc_xlsxabstractooxmlfile.cpp_parameters  moc_xlsxabstractooxmlfile_p.cpp_parameters  moc_xlsxabstractsheet.cpp_parameters  moc_xlsxabstractsheet_p.cpp_parameters  moc_xlsxcell.cpp_parameters  moc_xlsxcell_p.cpp_parameters  moc_xlsxcellformula.cpp_parameters  moc_xlsxcellformula_p.cpp_parameters  moc_xlsxcellrange.cpp_parameters  moc_xlsxcellreference.cpp_parameters  moc_xlsxchart.cpp_parameters  moc_xlsxchart_p.cpp_parameters  moc_xlsxchartsheet.cpp_parameters  moc_xlsxchartsheet_p.cpp_parameters  moc_xlsxcolor_p.cpp_parameters  moc_xlsxconditionalformatting.cpp_parameters  moc_xlsxconditionalformatting_p.cpp_parameters  moc_xlsxcontenttypes_p.cpp_parameters  moc_xlsxdatavalidation.cpp_parameters  moc_xlsxdatavalidation_p.cpp_parameters  moc_xlsxdocpropsapp_p.cpp_parameters  moc_xlsxdocpropscore_p.cpp_parameters  moc_xlsxdocument.cpp_parameters  moc_xlsxdocument_p.cpp_parameters  moc_xlsxdrawing_p.cpp_parameters  moc_xlsxdrawinganchor_p.cpp_parameters  moc_xlsxformat.cpp_parameters  moc_xlsxformat_p.cpp_parameters  moc_xlsxglobal.cpp_parameters  moc_xlsxmediafile_p.cpp_parameters  moc_xlsxnumformatparser_p.cpp_parameters  moc_xlsxrelationships_p.cpp_parameters  moc_xlsxrichstring.cpp_parameters  moc_xlsxrichstring_p.cpp_parameters  moc_xlsxsharedstrings_p.cpp_parameters  moc_xlsxsimpleooxmlfile_p.cpp_parameters  moc_xlsxstyles_p.cpp_parameters  moc_xlsxtheme_p.cpp_parameters  (+7 more)
